--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,6 +1,42 @@
+body {
+  font-family: Tahoma, Arial; }
+
+.navbar {
+  -webkit-border-radius: 0 0 5px 5px;
+  -moz-border-radius: 0 0 5px 5px;
+  -ms-border-radius: 0 0 5px 5px;
+  border-radius: 0 0 5px 5px; }
+
+h1 {
+  font-size: 24px;
+  color: #3c3c3c; }
+
+a {
+  text-decoration: none;
+  color: #000; }
+
+a:hover {
+  text-decoration: underline;
+  color: #3c3c3c; }
+
+.input-group-addon {
+  min-width: 100px; }
+
+.btn-primary {
+  background-color: #000;
+  border-color: #000; }
+
+.btn-primary:hover {
+  background-color: #3c3c3c;
+  border-color: #3c3c3c; }
+
+iframe {
+  border: 0; }
+
 legend {
-	float: left;
-}
+  float: left; }
+
 legend span {
-	float: right;
-}
+  float: right; }
+
+/*# sourceMappingURL=style.css.map */
